--- a/pom.xml
+++ b/pom.xml
@@ -29,22 +29,27 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-logging</artifactId>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-redis</artifactId>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -61,6 +66,17 @@
             </plugin>
         </plugins>
     </build>
+
+    <distributionManagement>
+        <repository>
+            <id>finance-releases</id>
+            <url>http://10.60.80.74:8081/nexus/content/repositories/financerel/</url>
+        </repository>
+        <snapshotRepository>
+            <id>finance-snapshots</id>
+            <url>http://10.60.80.74:8081/nexus/content/repositories/financesnapshot/</url>
+        </snapshotRepository>
+    </distributionManagement>
 
 
 </project>
